bootstap and layout added

--- a/flask_ex_app/templates/edit.html
+++ b/flask_ex_app/templates/edit.html
@@ -1,3 +1,6 @@
+{% extends 'layout.html' %}
+{% block body%}
+
 <form action="/update/{{data.0}}" method="POST">
     <input type="text" name="fullname" placeholder="Fullname" value="{{ data.1}}">
     <input type="text" name="phone" placeholder="Phone" value="{{data.2}}">
@@ -6,3 +9,4 @@
         SAVE
     </button>
 </form>
+{% endblock %}
