--- a/flask_ex_app/templates/index.html
+++ b/flask_ex_app/templates/index.html
@@ -1,5 +1,23 @@
 {% extends 'layout.html' %}
 {% block body%}
+<div class="row">
+    <div class="col-md-5">
+        <div class="card card-body">
+            <form action="/add_contact" method="POST">
+                <input type="text" name="fullname" placeholder="Fullname">
+                <input type="text" name="phone" placeholder="Phone">
+                <input type="text" name="email" placeholder="Email">
+                <button type="submit">
+                    SAVE
+                </button>
+            </form>
+        </div>
+    </div>
+    <div class="col-md-7">
+
+    </div>
+</div>
+
 
 {% with messages = get_flashed_messages() %}  <!-- Guarda valor de mensaje enviado con flash()-->
 {% if messages %}
@@ -14,15 +32,6 @@
 {% endfor %}
 {% endif %}
 {% endwith %}
-
-<form action="/add_contact" method="POST">
-    <input type="text" name="fullname" placeholder="Fullname">
-    <input type="text" name="phone" placeholder="Phone">
-    <input type="text" name="email" placeholder="Email">
-    <button type="submit">
-        SAVE
-    </button>
-</form>
 
 <table>
     <thead>
