gave style to tables and mods in /edit

--- a/flask_ex_app/templates/index.html
+++ b/flask_ex_app/templates/index.html
@@ -2,59 +2,68 @@
 {% block body%}
 <div class="row">
     <div class="col-md-5">
+        {% with messages = get_flashed_messages() %}  <!-- Guarda valor de mensaje enviado con flash()-->
+        {% if messages %}
+        {% for message in messages %} <!-- por cada mensage en arreglo message -->
+    
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <p>{{ message }}</p>    <!-- muestra mensaje -->
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+        {% endif %}
+        {% endwith %}
+
         <div class="card card-body">
             <form action="/add_contact" method="POST">
-                <input type="text" name="fullname" placeholder="Fullname">
-                <input type="text" name="phone" placeholder="Phone">
-                <input type="text" name="email" placeholder="Email">
-                <button type="submit">
-                    SAVE
-                </button>
+                <div class="form-group">
+                    <input type="text" name="fullname" placeholder="Fullname" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="phone" placeholder="Phone" class="form-control">
+                </div>
+                <div class="form-group">
+                    <input type="text" name="email" placeholder="Email" class="form-control">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">
+                        SAVE
+                    </button>
+                </div>
             </form>
         </div>
     </div>
     <div class="col-md-7">
-
+        <table class="table table-striped table-bordered bg-white table-sm">
+            <thead>
+                <tr>
+                    <td>Name</td>
+                    <td>Phone</td>
+                    <td>Email</td>
+                    <td>Operation</td>
+                </tr>
+            </thead>
+            <tbody>
+                {% for i in data %}
+                    <tr>
+                        <td>{{i.1}}</td>
+                        <td>{{i.2}}</td>
+                        <td>{{i.3}}</td>
+                        <td>
+                            <a href="/edit/{{i.0}}" class="btn btn-info">Edit</a>
+                            <a href="/delete/{{i.0}}" class="btn btn-warning">Delete</a>
+                        </td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
 
 
-{% with messages = get_flashed_messages() %}  <!-- Guarda valor de mensaje enviado con flash()-->
-{% if messages %}
-{% for message in messages %} <!-- por cada mensage en arreglo message -->
-    
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-        <p>{{ message }}</p>    <!-- muestra mensaje -->
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-{% endfor %}
-{% endif %}
-{% endwith %}
 
-<table>
-    <thead>
-        <tr>
-            <td>Name</td>
-            <td>Phone</td>
-            <td>Email</td>
-            <td>Operation</td>
-        </tr>
-    </thead>
-    <tbody>
-        {% for i in data %}
-            <tr>
-                <td>{{i.1}}</td>
-                <td>{{i.2}}</td>
-                <td>{{i.3}}</td>
-                <td>
-                    <a href="/edit/{{i.0}}">Edit</a>
-                    <a href="/delete/{{i.0}}">Delete</a>
-                </td>
-            </tr>
-        {% endfor %}
-    </tbody>
-</table>
+
 
 {% endblock %}
