--- a/flask_ex_app/templates/edit.html
+++ b/flask_ex_app/templates/edit.html
@@ -1,12 +1,23 @@
 {% extends 'layout.html' %}
 {% block body%}
 
-<form action="/update/{{data.0}}" method="POST">
-    <input type="text" name="fullname" placeholder="Fullname" value="{{ data.1}}">
-    <input type="text" name="phone" placeholder="Phone" value="{{data.2}}">
-    <input type="text" name="email" placeholder="Email" value="{{data.3}}">
-    <button type="submit">
-        SAVE
-    </button>
-</form>
+
+<div class="card card-body">
+    <form action="/update/{{data.0}}" method="POST">
+        <div class="form-group">
+            <input type="text" name="fullname" placeholder="Fullname" value="{{ data.1}}" class="form-control">
+        </div>
+        <div class="form-group">
+            <input type="text" name="phone" placeholder="Phone" value="{{data.2}}" class="form-control">
+        </div>
+        <div class="form-group">
+            <input type="text" name="email" placeholder="Email" value="{{data.3}}" class="form-control">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-lg btn-block">
+                SAVE
+            </button>
+        </div>
+    </form>
+</div>
 {% endblock %}
