--- a/flask_ex_app/templates/index.html
+++ b/flask_ex_app/templates/index.html
@@ -53,7 +53,7 @@
                         <td>{{i.3}}</td>
                         <td>
                             <a href="/edit/{{i.0}}" class="btn btn-info">Edit</a>
-                            <a href="/delete/{{i.0}}" class="btn btn-warning">Delete</a>
+                            <a href="/delete/{{i.0}}" class="btn btn-warning btn-delete">Delete</a>
                         </td>
                     </tr>
                 {% endfor %}
